# sanban

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  pyproject.toml  schema.json
sanban/: mcp_server.py  rest.py  server.py  storage.py
sanban/static/: index.html
static/: index.html
