[project]
name = "sanban"
version = "0.1.0"
description = "Simple kanban that just works. REST API + MCP server for devs and agents."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "mcp>=1.0",
]

[project.scripts]
sanban = "sanban.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
